src/test/ui/write-to-static-mut-in-static.stderr
error[E0019]: static contains unimplemented expression type
  --> $DIR/write-to-static-mut-in-static.rs:2:33
   |
LL | pub static mut B: () = unsafe { A = 1; };
   |                                 ^^^^^

error[E0658]: dereferencing raw pointers in statics is unstable
  --> $DIR/write-to-static-mut-in-static.rs:2:33
   |
LL | pub static mut B: () = unsafe { A = 1; };
   |                                 ^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51911
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error[E0019]: static contains unimplemented expression type
  --> $DIR/write-to-static-mut-in-static.rs:5:34
   |
LL | pub static mut C: u32 = unsafe { C = 1; 0 };
   |                                  ^^^^^

error[E0658]: dereferencing raw pointers in statics is unstable
  --> $DIR/write-to-static-mut-in-static.rs:5:34
   |
LL | pub static mut C: u32 = unsafe { C = 1; 0 };
   |                                  ^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51911
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0019, E0658.
For more information about an error, try `rustc --explain E0019`.
